added notes for installing and configuring ElasticSearch